--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,6 +1,17 @@
+<h2><%= @question.title%></h2>
+<p><%= @question.description %></p>
+
+<% @question.answers.each do |videos| %>
+  <% unless videos.video.nil?  %>
+   <li><iframe src="http://www.youtube.com/embed/<%= videos.video %>"></iframe></li>
+   <% end %>
+<% end %>
+
+
 <%= form_for @answer, :url => upload_new_answer_path do |f| -%>
   <%= f.label :caption %>
   <%= f.text_field :caption, :class => 'text_field' %>
+  <%= f.hidden_field :question_id %>
   <%= button_tag "Step 2" %>
   <%= link_to t("web-app-theme.cancel", :default => "Cancel"), answers_path, :class => "text_button_padding link_button" %>
 <% end -%>
