--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -9,7 +9,7 @@
 
 
 <%= form_for @answer, :url => upload_new_answer_path do |f| -%>
-  <%= f.label :caption %>
+  <%= f.label "Answer" %>
   <%= f.text_field :caption, :class => 'text_field' %>
   <%= f.hidden_field :question_id %>
   <%= button_tag "Step 2" %>
