--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,8 @@
           <%= link_to "Logout", destroy_user_session_path, method: :delete %>
         <% else %>
           <%= link_to "Sign up", new_user_registration_path %> |
-          <%= link_to "Login", new_user_session_path %>
+          <%= link_to "Login", new_user_session_path %> |
+          <%= link_to "Sign in with Google", user_omniauth_authorize_path(:google_oauth2) %>
         <% end %>
       </nav>
       <% flash.each do |name, msg| %>
