--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,6 +1,6 @@
-<% flash.each do |name, msg| %>
-    <%= content_tag :div, msg, :id => "flash_#{name}" %>
- <% end %>
+<%# flash.each do |name, msg| %>
+    <%#= content_tag :div, msg, :id => "flash_#{name}" %>
+ <%# end %>
 
 <ul>
   <% @questions.each do |question| %>
