enables upload of lesson videos

--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -1,3 +1,6 @@
 
 <h2><%= @lesson.title %></h2>
 <p><%= @lesson.description %></p>
+
+
+<iframe src="http://www.youtube.com/embed/<%= @lesson.video %>"></iframe>
