--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -1,4 +1,7 @@
+
+
 <% @lessons.each do |lesson|  %>
+  <%= lesson.inspect %>
   <h2><%= lesson.title %></h2>
     <p><%= lesson.description %></p>
     <li><%= lesson.created_at %></li>
