--- a/app/views/lessons/new.html.erb
+++ b/app/views/lessons/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @lesson do |f| %>
+<%= form_for @lesson, :url => upload_new_lesson_path do |f| %>
 
   <%= f.hidden_field :user_id %>
   <%= f.label :title %>
