--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -1,8 +1,10 @@
 
 
 <% @lessons.each do |lesson|  %>
-  <%= lesson.inspect %>
+
   <h2><%= lesson.title %></h2>
     <p><%= lesson.description %></p>
     <li><%= lesson.created_at %></li>
+    <%= button_to "Delete Lesson", { action: "destroy", id: lesson.id },
+                                method: :delete, data: { confirm: "Are you sure?" } %>
 <% end %>
