--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -4,8 +4,11 @@
 
 <ul>
   <% @questions.each do |question| %>
-
-    <li><a href='/questions/<%= question.id %>'><%= question.title %></a></li>
+    <li>
+      <a href='/questions/<%= question.id %>'>
+        <%= question.title %>
+      </a>
+    </li>
   <% end %>
 </ul>
 
