--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,9 +1,12 @@
 <h2><%= @question.title%></h2>
 <p><%= @question.description %></p>
 
-<% @question.answers.each do |videos| %>
-  <% unless videos.video.nil?  %>
-   <li><iframe src="http://www.youtube.com/embed/<%= videos.video %>"></iframe></li>
+<% @question.answers.each do |answer| %>
+  <% unless answer.video.nil?  %>
+    <li>
+      <%= render partial: 'votes', locals: {:votable => answer} %>
+      <iframe src="http://www.youtube.com/embed/<%= answer.video %>"></iframe>
+    </li>
    <% end %>
 <% end %>
 
@@ -11,7 +14,7 @@
 <%= form_for @answer, :url => upload_new_answer_path do |f| -%>
   <%= f.label "Answer" %>
   <%= f.text_field :caption, :class => 'text_field' %>
-  <%= f.hidden_field :question_id %>
+  <%= f.hidden_field :question %>
   <%= button_tag "Step 2" %>
-  <%= link_to t("web-app-theme.cancel", :default => "Cancel"), answers_path, :class => "text_button_padding link_button" %>
+  <%= link_to t(:default => "Cancel"), answers_path %>
 <% end -%>
