--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -7,11 +7,14 @@
    <% end %>
 <% end %>
 
-
-<%= form_for @answer, :url => upload_new_answer_path do |f| -%>
-  <%= f.label "Answer" %>
-  <%= f.text_field :caption, :class => 'text_field' %>
-  <%= f.hidden_field :question_id %>
-  <%= button_tag "Step 2" %>
-  <%= link_to t("web-app-theme.cancel", :default => "Cancel"), answers_path, :class => "text_button_padding link_button" %>
-<% end -%>
+<% if user_signed_in? %>
+  <%= form_for @answer, :url => upload_new_answer_path do |f| -%>
+    <%= f.label "Answer" %>
+    <%= f.text_field :caption, :class => 'text_field' %>
+    <%= f.hidden_field :question_id %>
+    <%= button_tag "Step 2" %>
+    <%= link_to t("web-app-theme.cancel", :default => "Cancel"), questions_path, :class => "text_button_padding link_button" %>
+  <% end -%>
+<% else %>
+  <h3>Please sign in to post an answer.</h3>
+<% end %>
