--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,20 +1,23 @@
-<h2><%= @question.title%></h2>
+<h2><%= @question.title %></h2>
 <p><%= @question.description %></p>
 
-<% @question.answers.each do |videos| %>
-  <% unless videos.video.nil?  %>
-   <li><iframe src="http://www.youtube.com/embed/<%= videos.video %>"></iframe></li>
+<% @question.answers.each do |answer| %>
+  <% unless answer.video.nil?  %>
+   <li><iframe src="http://www.youtube.com/embed/<%= answer.video %>"></iframe></li>
+   <%= answer.inspect %>
    <% end %>
 <% end %>
 
 <% if user_signed_in? %>
+  <%= params.inspect %>
   <%= form_for @answer, :url => upload_new_answer_path do |f| -%>
     <%= f.label "Answer" %>
     <%= f.text_field :caption, :class => 'text_field' %>
     <%= f.hidden_field :question_id %>
     <%= button_tag "Step 2" %>
-    <%= link_to t("web-app-theme.cancel", :default => "Cancel"), questions_path, :class => "text_button_padding link_button" %>
+    <%= link_to t("Cancel"), questions_path, :class => "text_button_padding link_button" %>
   <% end -%>
 <% else %>
   <h3>Please sign in to post an answer.</h3>
 <% end %>
+<%# binding.pry %>
