--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,12 +5,16 @@
     <%= stylesheet_link_tag    "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
+    <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <div id="container">
+    <header>
+      <h1>CODE CLIPS</h1>
+    </header>
+
       <nav class="user_nav">
         <% if user_signed_in? %>
-          Logged in as <strong><%= current_user.email %></strong>.
+          <h2><a href="/profiles/#{current_user.id}"><%= current_user.email %></a></h2>
           <%= link_to 'Edit profile', edit_user_registration_path %> |
           <%= link_to "Logout", destroy_user_session_path, method: :delete %>
         <% else %>
@@ -22,7 +26,13 @@
       <% flash.each do |name, msg| %>
       <%= content_tag :div, msg, id: "flash_#{name}" %>
       <% end %>
-      <%= yield %>
+
+    <div id="container">
+      <div class="content">
+        <%= yield %>
+      </div>
+
+      <div class="ads">ads</div>
     </div>
   </body>
 </html>
