--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,7 +1,11 @@
 <div class="question">
   <h2 class="question"><%= @question.title.upcase%></h2>
   <div class="vote"></div>
-  <p><%= @question.description %></p>
+    <p><%= @question.description %></p>
+    <div class="user_box">
+      <div class="avatar"></div>
+     <%= @user.email %>
+    </div>
 </div>
 
 
@@ -10,6 +14,7 @@
     <% unless videos.video.nil?  %>
     <div class="vote"></div>
      <li><iframe src="http://www.youtube.com/embed/<%= videos.video %>"></iframe></li>
+     <p class="caption"><%= videos.caption %></p>
      <% end %>
   <% end %>
 </ul>
