--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,207 @@
  *= require_self
  *= require_tree .
  */
+
+html {
+  background-color: rgb(196 196 196 ); 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
+}
+
+body {
+  margin: 0;
+}
+
+
+.question_list {
+  background-color: rgb(92,  92,  92);   
+}
+.question_list li a {
+  color: rgb(89, 250, 251);
+}
+header {
+  margin: 0px;
+  height: 100px;
+  background-color: rgb(45, 45, 45);
+}
+
+.user_nav {
+  list-style: none;
+}
+
+nav ul li {
+  list-style: none;
+  display: inline;
+  color: white;
+  font-size: 20px;
+  font-family: Helvetica Neue, Arial;
+  padding: 8px;
+  text-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
+  border-right: solid 1px white;
+}
+.logo {
+  margin: 0px;
+  border-right: 2px solid #00FFFF;
+  border-bottom: 2px solid #00FFFF;
+  height: 100px;
+}
+.logo a{
+  color: white;
+  text-shadow: 0 0 15px rgba(89, 250, 251, 0.6);
+  font-size: 80px;
+  padding: 20px;
+  top: 0px;
+  position: relative;
+  font-family: 'Oswald', sans-serif;
+  left: 50px;
+
+}
+nav ul li a {
+  color: white;
+  font-family: Helvetica Neue, Arial;
+  text-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
+}
+
+header a {
+  text-decoration: none;
+  font-family: Helvetica;
+}
+
+.search {
+  margin: 0;
+  background-color: white;
+  height: 75px;
+  opacity: .6;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
+}
+
+#container {
+  height: 800px;
+  padding-top: 50px;
+  background-color: #3C3C3C;
+  width: 800px;
+  border: 2px solid #00FFFF;
+  border-left: none;
+  margin-top: 100px;
+}
+
+#container ul li a{
+  color: white;
+  font-family: Helvetica Neue, Arial;
+  text-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
+  text-decoration: none;
+  list-style: none;
+  font-size: 20px;
+}
+
+#container a{
+  color: white;
+  font-family: Helvetica Neue, Arial;
+  text-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
+  text-decoration: none;
+  list-style: none;
+  margin-left: 60px;
+}
+
+#container ul {
+  list-style: none;
+}
+
+nav ul {
+  height: 100px;
+  margin: 0px;
+  position: absolute;
+  right: 50px;
+  top: 15px;
+}
+
+h2, h3, p {
+  color: white;
+  font-size: 20px;
+  font-family: Helvetica Neue, Arial;
+  text-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
+  margin: 20px;
+}
+
+.edit {
+  margin-left: 40px;
+}
+
+input {
+  width: 275px;
+  height: 40px;
+  position: relative;
+  left: 150px;
+  top: -40px;
+  background-color: rgba(250, 250, 250, 1);
+  border-radius: 5px;  
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
+  font-size: 20px;
+  font-family: Helvetica Neue, Arial;
+  border: 2px solid #644436;
+  padding: 5px;
+  margin: 20px;
+}
+
+/*input #answer_caption .text_field {
+  margin: 0px;
+
+}*/
+
+label {
+  color: white;
+  font-family: Helvetica Neue;
+  position: relative;
+  left: 10px;
+  text-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
+}
+label #user_remember_me {
+  background-color: black;
+  margin: 0px;
+}
+
+.index  ul li{
+  padding: 10px;
+  list-style: none;
+  border-bottom: solid 2px rgb(89, 250, 251);
+  width:  500px;
+
+}
+
+input#answer_caption.text_field {
+  width: 250px;
+  height: 25px;
+  top: 10px;
+  left: 15px;
+  position: relative;
+}
+
+iframe {
+  height: 400px;
+  width: 700px;
+  opacity: 1;
+}
+
+/* search styling*/
+
+/*.text_input {
+  margin: 0;
+  height: 30px;
+  top: 10px;
+  left: 20px;
+  border-radius: 0;
+  border: 2px solid rgb(89, 250, 251);
+}
+
+.submit_input {
+  border: 2px solid rgb(89, 250, 251);
+  margin: 0;
+  height: 30px;
+  width: 100px;
+  top: 10px;
+  left: 20px;
+  border-radius: 0;
+}*/
