--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,11 +1,11 @@
 <%# flash.each do |name, msg| %>
     <%#= content_tag :div, msg, :id => "flash_#{name}" %>
  <%# end %>
-
-<ul>
-  <% @questions.each do |question| %>
-    <li><a href='/questions/<%= question.id %>'><%= question.title %></a></li>
-  <% end %>
-</ul>
-
-<%= link_to "Ask a question", new_question_path %>
+<div class='index'>
+  <ul>
+    <% @questions.each do |question| %>
+      <li class='question_list'><a href='/questions/<%= question.id %>'><%= question.title %></a></li>
+    <% end %>
+  </ul>
+</div>
+  <%= link_to "Ask a question", new_question_path %>
