--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
       <nav class="user_nav">
         <% if user_signed_in? %>
-          <h2><a href="/profiles/#{current_user.id}"><%= current_user.email %></a></h2>
+          <h2><a href="/profiles/<%= current_user.id %>"><%= current_user.email %></a></h2>
           <%= link_to 'Edit profile', edit_user_registration_path %> |
           <%= link_to "Logout", destroy_user_session_path, method: :delete %>
         <% else %>
