Devise Views Tweaks, create edit name, and other various view tweaks

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,11 @@
       <nav class="user_nav">
         <% if user_signed_in? %>
           Logged in as <strong><%= current_user.email %></strong>.
-          <%= link_to 'Edit profile', edit_user_registration_path %> |
+          <%= link_to 'Edit Account', edit_user_registration_path %> |
           <%= link_to "Logout", destroy_user_session_path, method: :delete %>
         <% else %>
           <%= link_to "Sign up", new_user_registration_path %> |
-          <%= link_to "Login", new_user_session_path %> |
+          <%= link_to "Sign in", new_user_session_path %> |
           <%= link_to "Sign in with Google", user_omniauth_authorize_path(:google_oauth2) %>
         <% end %>
       </nav>
