--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,9 +2,12 @@
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
-
+  <div>
+    <%= f.label :name %><br />
+    <%= f.text_field :name %>
+  </div>
   <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+  <%= f.email_field :email %></div>
   <% if f.object.password_required? %>
     <div><%= f.label :password %><br />
     <%= f.password_field :password %></div>
