--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,7 +1,7 @@
 <%= form_for @question do |f| %>
-  <%= f.text_field :title %>
   <%= f.label :title %>
-  <%= f.text_area :description %>
-  <%= f.label :question %>
-  <%= f.submit %>
+  <%= f.text_field :title %> <br />
+  <%= f.label :question %> <br />
+  <%= f.text_area :description %> <br />
+  <%= f.submit "Post Question" %>
 <% end %>
