--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,207 +13,122 @@
  */
 
 
-html {
-  background-color: rgb(196 196 196 );
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-
-}
-
-body {
+body{
   margin: 0;
-}
-
-
-.question_list {
-  background-color: rgb(92,  92,  92);
-}
-.question_list li a {
-  color: rgb(89, 250, 251);
-}
-header {
-  margin: 0px;
-  height: 100px;
-  background-color: rgb(45, 45, 45);
-}
-
-.user_nav {
-  list-style: none;
-}
-
-nav ul li {
-  list-style: none;
-  display: inline;
-  color: white;
-  font-size: 20px;
-  font-family: Helvetica Neue, Arial;
-  padding: 8px;
-  text-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
-  border-right: solid 1px white;
-}
-.logo {
-  margin: 0px;
-  border-right: 2px solid #00FFFF;
-  border-bottom: 2px solid #00FFFF;
-  height: 100px;
-}
-.logo a{
-  color: white;
-  text-shadow: 0 0 15px rgba(89, 250, 251, 0.6);
-  font-size: 80px;
-  padding: 20px;
-  top: 0px;
-  position: relative;
+  background-color: #C4C4C4;
   font-family: 'Oswald', sans-serif;
-  left: 50px;
-
+  width: 940px;
+  margin: 0 auto;
 }
-nav ul li a {
+header{
+  background-color: #C4C4C4;
   color: white;
-  font-family: Helvetica Neue, Arial;
-  text-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
+  font-size: 50px;
+  float: left;
+  margin: 0 auto;
 }
 
-header a {
-  text-decoration: none;
-  font-family: Helvetica;
-}
-
-.search {
+h1{
   margin: 0;
-  background-color: white;
-  height: 75px;
-  opacity: .6;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
 }
 
-#container {
-  height: 800px;
-  padding-top: 50px;
-  background-color: #3C3C3C;
-  width: 800px;
-  border: 2px solid #00FFFF;
-  border-left: none;
-  margin-top: 100px;
+nav{
+  float: right;
 }
 
-#container ul li a{
-  color: white;
-  font-family: Helvetica Neue, Arial;
-  text-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
+nav a{
   text-decoration: none;
-  list-style: none;
-  font-size: 20px;
+  color: black;
 }
 
-#container a{
-  color: white;
-  font-family: Helvetica Neue, Arial;
-  text-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
-  text-decoration: none;
-  list-style: none;
-  margin-left: 60px;
+.content{
+  background-color: #C4C4C4;
+  width: 65%;
+  float: left;
+  position: relative;
 }
 
-#container ul {
-  list-style: none;
+.ads{
+  background-color: #7D7D7D;
+  width: 30%;
+  height: 500px;
+  float: right;
+  margin-top: 25px;
 }
 
-nav ul {
+
+
+.question h2{
+  border-bottom: solid black 2px;
+  margin-bottom: 0;
+}
+
+.question{
+  word-wrap: break-word;
+}
+
+.vote{
+  width: 60px;
   height: 100px;
-  margin: 0px;
-  position: absolute;
-  right: 50px;
-  top: 15px;
-}
-
-h2, h3, p {
-  color: white;
-  font-size: 20px;
-  font-family: Helvetica Neue, Arial;
-  text-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
-  margin: 20px;
-}
-
-.edit {
-  margin-left: 40px;
-}
-
-input {
-  width: 275px;
-  height: 40px;
-  position: relative;
-  left: 150px;
-  top: -40px;
-  background-color: rgba(250, 250, 250, 1);
-  border-radius: 5px;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
-  font-size: 20px;
-  font-family: Helvetica Neue, Arial;
-  border: 2px solid #644436;
-  padding: 5px;
-  margin: 20px;
-}
-
-/*input #answer_caption .text_field {
-  margin: 0px;
-
-}*/
-
-label {
-  color: white;
-  font-family: Helvetica Neue;
-  position: relative;
-  left: 10px;
-  text-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
-}
-label #user_remember_me {
   background-color: black;
-  margin: 0px;
+  float: left;
+  margin: 20px 20px;
 }
 
-.index  ul li{
-  padding: 10px;
-  list-style: none;
-  border-bottom: solid 2px rgb(89, 250, 251);
-  width:  500px;
+.question{
+  overflow: hidden;
+}
+
+.question p{
+  float: left;
+  width: 360px;
 
 }
 
-input#answer_caption.text_field {
-  width: 250px;
-  height: 25px;
-  top: 10px;
-  left: 15px;
+ul.answers{
+  clear: both;
+  list-style-type: none;
+  padding: 0;
+}
+
+ul.answers li{
+  padding: 9px 0;
+  border-top: solid black 2px;
+}
+
+p.caption{
+  margin-left: 100px;
+}
+
+.user_box{
+  background-color: #00FFFF;
+  height: 60px;
+  width: 140px;
+  position: absolute;
+  right: 0;
+  margin-top: 20px;
+  font-size: 12px;
+}
+
+.user_box a{
+  text-decoration: none;
+  color: black;
+}
+
+a:hover{
+  color: #7D7D7D;
+}
+
+.avatar{
+  height: 40px;
+  width: 40px;
+  border: solid black 1px;
+  margin: 10px;
+}
+
+.answer{
   position: relative;
 }
 
-iframe {
-  height: 400px;
-  width: 700px;
-  opacity: 1;
-}
 
-/* search styling*/
-
-/*.text_input {
-  margin: 0;
-  height: 30px;
-  top: 10px;
-  left: 20px;
-  border-radius: 0;
-  border: 2px solid rgb(89, 250, 251);
-}
-
-.submit_input {
-  border: 2px solid rgb(89, 250, 251);
-  margin: 0;
-  height: 30px;
-  width: 100px;
-  top: 10px;
-  left: 20px;
-  border-radius: 0;
-}*/
 
