--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -33,11 +33,11 @@
 
 <% if user_signed_in? %>
   <%= form_for @answer, :url => upload_new_answer_path do |f| -%>
-  <%= f.label "Answer" %>
+  <%= f.label "Answer Caption" %>
   <%= f.text_field :caption, :class => 'text_field' %>
   <%= f.hidden_field :question_id %>
   <%= button_tag "Step 2" %>
-  <%= link_to t("Cancel"), questions_path, :class => "text_button_padding link_button" %>
+  <%= link_to "Cancel", questions_path %>
   <% end -%>
 <% else %>
   <h3>Please sign in to post an answer.</h3>
