--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -4,39 +4,39 @@
     <p><%= @question.description %></p>
     <div class="user_box">
       <div class="avatar"></div>
-     <a href="/profiles/<%= @user.id %>"><%= @user.email %></a>
+     <a href="/profiles/<%= @question.user.id %>"><%= @question.user.email %></a>
     </div>
 </div>
 
 <ul class="answers">
   <h3><%= pluralize(@question.answers.count, 'Answer') %></h3>
-  <% @question.answers.each do |answer| %>
-    <% if answer.video.nil?  %>
-     <h3>No Answers posted yet.  Be the first!</h3>
-    <% else %>
+  <% unless @answers.empty? %>
+    <% @answers.each do |answer| %>
+      <%#= answer.inspect %>
       <div class="answer">
         <div class="vote"></div>
         <div class="user_box">
-          <div class="avatar"></div>
-          <a href="/profiles/<%= answer.user.id %>"><%= answer.user.email %></a>
+        <div class="avatar"></div>
+        <a href="/profiles/<%= answer.user.id %>"><%= answer.user.email %></a>
         </div>
-        <li>
-          <iframe src="http://www.youtube.com/embed/<%= answer.video %>"></iframe></li>
-        <p class="caption"><%= answer.caption %></p>
-
-      </div>
+          <li>
+            <iframe src="http://www.youtube.com/embed/<%= answer.video %>"></iframe>
+          </li>
+          <p class="caption"><%= answer.caption %></p>
     <% end %>
+  <% else %>
+    <h3>No Answers posted yet.  Be the first!</h3>
   <% end %>
 </ul>
 
 
 <% if user_signed_in? %>
   <%= form_for @answer, :url => upload_new_answer_path do |f| -%>
-  <%= f.label "Answer" %>
-  <%= f.text_field :caption, :class => 'text_field' %>
-  <%= f.hidden_field :question_id %>
-  <%= button_tag "Step 2" %>
-  <%= link_to t("Cancel"), questions_path, :class => "text_button_padding link_button" %>
+    <%= f.label "Answer" %>
+    <%= f.text_field :caption, :class => 'text_field' %>
+    <%= f.hidden_field :question_id, value: @question.id %>
+    <%= button_tag "Step 2" %>
+    <%= link_to t("Cancel"), questions_path, :class => "text_button_padding link_button" %>
   <% end -%>
 <% else %>
   <h3>Please sign in to post an answer.</h3>
