--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -25,10 +25,10 @@
       <%= f.password_field :current_password %></div>
     <% end %>
 
-    <div><%= f.submit "Update" %></div>
+    <div><%= f.submit "Update", :class => "submit" %></div>
   <% end %>
 
-  <p>Sorry to see you go.  If you wish to cancel your account, click the button below. <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
+  <p>Sorry to see you go.  If you wish to cancel your account, click the button below. <%= button_to "Cancel my account", registration_path(resource_name), :class => "submit", :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
 
 
   <%= link_to "Back", :back %>
