--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,15 +9,14 @@
   </head>
   <body>
     <header>
-      <h1><a href="/">CODE CLIPS</a></h1>
+      <h1><a href="/">{ CODE } CLIPS</a></h1>
     </header>
 
       <nav class="user_nav">
         <% if user_signed_in? %>
 
-          <h2><a href="/profiles/<%= current_user.id %>"><%= current_user.name %></a></h2>
+          <a href="/profiles/<%= current_user.id %>"><%= current_user.name %></a> |
           <%= link_to 'About', '/about.html' %> |
-          <%= link_to 'How to Use', '/how_to_use.html' %> |
           <%= link_to 'Edit Account', edit_user_registration_path %> |
 
           <%= link_to "Logout", destroy_user_session_path, method: :delete %>
@@ -38,6 +37,7 @@
 
     <div id="container">
       <div class="content">
+        <h2>search bar</h2>
         <%= yield %>
       </div>
 
