--- a/app/views/lessons/new.html.erb
+++ b/app/views/lessons/new.html.erb
@@ -1,8 +1,10 @@
+
+<h3>POST A LESSON!</h3>
 <%= form_for @lesson, :url => upload_new_lesson_path do |f| %>
 
   <%= f.label :title %>
   <%= f.text_field :title %>
   <%= f.label :description %>
-  <%= f.text_area :description %>
-  <%= f.submit %>
+  <%= f.text_area :description, :rows => "10" %>
+  <%= f.submit class: "post"%>
 <% end %>
