--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,11 +1,11 @@
 
-
+<h3>ASK A QUESTION!</h3>
 <%= form_for @question do |f| %>
 
   <%= f.label :title %>
-  <%= f.text_field :title %> <br />
-  <%= f.label :question %> <br />
-  <%= f.text_area :description %> <br />
-  <%= f.submit "Post Question" %>
+  <%= f.text_field :title %>
+  <%= f.label :question %>
+  <%= f.text_area :description, :rows => "10" %>
+  <%= f.submit "Post Question", class: "post" %>
 
 <% end %>
