--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -19,7 +19,7 @@
         <div class="vote"></div>
         <div class="user_box">
           <div class="avatar"></div>
-          <a href="/profiles/<%= answer.user.id %>"><%= answer.user.email %></a>
+          <a href="/profiles/<%= answer.user.id %>"><%= answer.user.name %></a>
         </div>
         <li>
           <iframe src="http://www.youtube.com/embed/<%= answer.video %>"></iframe></li>
@@ -37,7 +37,7 @@
   <%= f.text_field :caption, :class => 'text_field' %>
   <%= f.hidden_field :question_id %>
   <%= button_tag "Step 2" %>
-  <%= link_to "Cancel", questions_path %>
+  <%= link_to "Cancel", questions_path, :class => "cancel_link" %>
   <% end -%>
 <% else %>
   <h3>Please sign in to post an answer.</h3>
