--- a/app/views/answers/upload.html.erb
+++ b/app/views/answers/upload.html.erb
@@ -1,6 +1,6 @@
 <%= form_tag @upload_info[:url], :multipart => true do %>
   <%= hidden_field_tag :token, @upload_info[:token] %>
   <%= label_tag :file %>
-  <%= file_field_tag :file %>
+  <%= file_field_tag :file %><br>
   <%= submit_tag "Upload video" %>
 <% end %>
