changes email to username under avatar

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -4,7 +4,7 @@
     <p><%= @question.description %></p>
     <div class="user_box">
       <div class="avatar"></div>
-     <a href="/profiles/<%= @question.user.id %>"><%= @question.user.email %></a>
+     <a href="/profiles/<%= @question.user.id %>"><%= @question.user.name %></a>
     </div>
 </div>
 
