--- a/app/views/application/_votes.html.erb
+++ b/app/views/application/_votes.html.erb
@@ -1,11 +1,9 @@
-<div>
-  upvote button
-
+<div class="vote">
   <%= form_tag('/from_button', :method => 'get') do %>
     <%= hidden_field_tag :button, 'up' %>
     <%= hidden_field_tag :votable_id, votable.id %>
     <%= hidden_field_tag :votable_type, votable.class %>
-    <%= submit_tag("Vote Up") %>
+    <%= submit_tag "Vote Up", :class => "vote-up" %>
   <% end %>
 
   <%= Vote.get_vote_count(votable) %>
@@ -14,7 +12,6 @@
     <%= hidden_field_tag :button, 'down' %>
     <%= hidden_field_tag :votable_id, votable.id %>
     <%= hidden_field_tag :votable_type, votable.class %>
-    <%= submit_tag("Vote Down") %>
+    <%= submit_tag "Vote Down", :class => "vote-down" %>
   <% end %>
-
 </div>
