--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>LearningCurve</title>
+    <title>CODE CLIPS</title>
     <%= stylesheet_link_tag    "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
@@ -27,8 +27,12 @@
         <% end %>
 
       </nav>
-
+        <div class="post_links">
+          <%= link_to "ASK A QUESTION", new_question_path %>
+          <%= link_to "POST A LESSON", new_lesson_path %>
+        </div>
     </header>
+
 
 
       <% flash.each do |name, msg| %>
