--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -7,5 +7,5 @@
   <%= f.label :question %>
   <%= f.text_area :description, :rows => "10" %>
   <%= f.submit "Post Question", class: "post" %>
-
+  <%= link_to "<< Back", :back, class: "back" %>
 <% end %>
