--- a/app/views/lessons/edit.html.erb
+++ b/app/views/lessons/edit.html.erb
@@ -4,5 +4,6 @@
   <%= f.text_field :title %>
   <%= f.label :description %>
   <%= f.text_area :description %>
-  <%= f.submit %>
+  <%= f.submit class: "post"%>
+  <%= link_to "<< Back", :back, class: "back" %>
 <% end %>
