--- a/app/views/lessons/new.html.erb
+++ b/app/views/lessons/new.html.erb
@@ -7,4 +7,6 @@
   <%= f.label :description %>
   <%= f.text_area :description, :rows => "10" %>
   <%= f.submit class: "post"%>
+  <%= link_to "<< Back", :back, class: "back" %>
 <% end %>
+
