--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -32,5 +32,5 @@
   <p>Sorry to see you go.  If you wish to cancel your account, click the button below. <%= button_to "Cancel my account", registration_path(resource_name), :class => "submit", :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
 
 
-  <%= link_to "Back", :back %>
+  <%= link_to "<< Back", :back, class: "back" %>
 </div>
