--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -3,4 +3,4 @@
 <p><%= @lesson.description %></p>
 <iframe src="http://www.youtube.com/embed/<%= @lesson.video %>"></iframe><br>
 <%= link_to "Edit Lesson", edit_lesson_path, class: "back" %><br>
-<%= link_to "<< Back", :back, class: "back" %>
+<%= link_to "<< Home", questions_path, class: "back" %>
