--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
           <%= form_tag searches_path, method: 'get' do %>
             <p>
               <%= text_field_tag :search, params[:search] %>
-              <%= submit_tag "Search", name: nil %>
+              <%= submit_tag "Search", class: "search", name: nil %>
             </p>
           <% end %>
         </div>
